--- a/package.json
+++ b/package.json
@@ -9,20 +9,30 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "@material-ui/core": "^4.12.4",
     "@material-ui/lab": "^4.0.0-alpha.61",
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.0",
+    "@types/node": "^17.0.32",
+    "@types/react": "^17.0.45",
+    "@types/react-dom": "^18.0.3",
     "bootstrap": "^5.1.3",
     "buffer": "^6.0.3",
-    "file-to-array-buffer": "^1.0.0",
     "nanoid": "^3.3.3",
     "prettier": "^2.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.0.1",
     "react-transition-group": "^4.4.2",
-    "web-vitals": "^2.1.4"
+    "redux": "^4.2.0",
+    "socket.io-client": "^4.5.0",
+    "typescript": "^4.6.4",
+    "web-vitals": "^2.1.4",
+    "websocket": "^1.0.34"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -54,6 +64,7 @@
   "devDependencies": {
     "eslint": "^8.14.0"
   },
+  "proxy": "https://jetbuild-app.herokuapp.com",
   "engines": {
     "node": "16.x",
     "npm": "8.x"
