--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-transition-group": "^4.4.2",
     "redux": "^4.2.0",
     "socket.io-client": "^4.5.0",
+    "styled-components": "^5.3.5",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4",
     "websocket": "^1.0.34"
