--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@types/node": "^17.0.32",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^18.0.3",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "buffer": "^6.0.3",
+    "classnames": "^2.3.1",
     "nanoid": "^3.3.3",
     "prettier": "^2.6.2",
     "react": "^17.0.2",
