--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.33.1",
+    "react-image-crop": "^10.0.6",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
