--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.1.3",
     "buffer": "^6.0.3",
     "classnames": "^2.3.1",
+    "craco": "^0.0.3",
     "nanoid": "^3.3.3",
     "prettier": "^2.6.2",
     "react": "^17.0.2",
@@ -43,10 +44,10 @@
     "websocket": "^1.0.34"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject"
   },
   "eslintConfig": {
     "extends": [
