--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-transition-group": "^4.4.2",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
+    "sass": "^1.55.0",
     "socket.io-client": "^4.5.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.6.4",
