new api changes

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_PATH=https://jetbuild-app.herokuapp.com
+REACT_APP_API_PATH=http://localhost:9090/http://localhost:8081/api
 REACT_APP_WEBSOCKETS_PATH=wss://jetbuild-app.herokuapp.com
